[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Enemies/rabbit.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bunny.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Hurtbox.gd" type="Script" id=3]
[ext_resource path="res://audio/sounds/Rabbit/rabbit_hop2.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sounds/Rabbit/rabbit_hop.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "running"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Hop")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "walking"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Hop")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 10 )

[node name="Bunny" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/running = SubResource( 1 )
anims/walking = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0.353554, -0.674175 )
shape = SubResource( 4 )

[node name="RunTimer" type="Timer" parent="."]
one_shot = true

[node name="TurnRays" type="Node2D" parent="."]

[node name="Floor" type="RayCast2D" parent="TurnRays"]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 9 )

[node name="Wall" type="RayCast2D" parent="TurnRays"]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 9 )

[node name="JumpRay" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 40 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sounds"

[node name="Hop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
max_distance = 200.0
attenuation = 2.73208
[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]
